# psoc6-rust-sa

./: .gitignore  LICENSE  README.md  platformio.ini
docs/: getting_started.rst
doku/: getting_started.rst
examples/cortex-m-quickstart/: Cargo.toml  memory.x
examples/cortex-m-quickstart/.cargo/: config
examples/cortex-m-quickstart/src/: main.rs
examples/rust-hello/: Cargo.toml  Embed.toml  README.md
examples/rust-hello/.cargo/: config.toml
examples/rust-hello/.cargo_old/: config.toml
examples/rust-hello/openocd/: version.xml
examples/rust-hello/openocd/flm/cypress/cat4/: sflash_write.tcl
examples/rust-hello/src/: main.rs
rust-hello/.cargo/: config.toml
