[package]
name = "rust-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cortex-m]
version = "0.6.1"

[dependencies.cortex-m-rt]
version = "0.6.11"

[dependencies.cortex-m-semihosting]
version = "0.3.5"

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"

[dependencies.psoc6-hal]
git = "https://github.com/psoc-rs/psoc6-hal"
rev = "86684f0"